Nalezen alternative protocols

--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -151,15 +151,17 @@ DynCNET changes the acceptance of task by a winning contractor to a provisional 
 The synchronization between managers and contractor to assess their current state requires some additional messaging. If a manager cancels a contract, it needs to notify the original contractor that the task has been awarded to another agent. Inversely, a contractor that takes up another task needs to notify the manager of the original task that it is no longer committed to executing that original task. Finally the contractor needs to send a message to the manager when it starts executing the task, so the manager can stop announcing the task to other agents.
 
 \subsection{Alternative Contract Net Extensions}
-\taskV{nalezen}
+In literature, other extensions of CNET can be found. \cite{TentativeBidding} describes a protocol that divides the bidding phase into two: pre-bidding and definitive bidding. The first round, pre-bidding, is only tentative. When bids have been received, instead of awarding the task to a participant the initiator informs all the participants of the tentative results. Based on these tentative results and on how the world and other running bidding processes evolve, participants can still change their bids. Once a participant has been tentatively accepted, it can send a definitive bid to the initiator.
 
-In literature, other extensions of CNET can be found. \cite{TentativeBidding} describes a 2-phase protocol (PreBidding and DefinitiveBidding). The first round of pre-bidding is only tentative. The initiator informs the participants of the tentative results. Participants can still change their offers based on these tentative results and how the world (and other bidding processes) evolves. Once a participant has been tentatively accepted, it can send a definitive bid to the initiator. If this bid is still better than all tentative bids from other participants, the participant will be informed and both agents commit to the contract. All other participants will be informed that the bidding is definitely over. If the definitive bid is not the best bid, the participant gets tentatively or definitely declined. In case of the former, it can submit a new tentative bid. This protocol can be seen as an extension on CNCP. Participants who get accepted, can still accept or decline by choosing the appropriate definitive bid. The advantage of this protocol over CNCP is that participants who get rejected can still improve their bid.
+If this bid is still better than all the tentative bids from the other participants, the participant will be awarded the task and both agents commit to the contract. All other participants will be informed that the bidding process is finished. If the definitive bid is not the best bid, the participant gets tentatively or definitively declined. In case of the former, it can retry to get the task by submitting a new tentative bid. This protocol can be seen as an extension on CNCP. Participants who get accepted, can use the definitive bid to accept or decline: they will submit a high bid in the former case and a low bid in the latter. The advantage of this protocol over CNCP is that participants who initially get rejected can still improve their bid.
 
-\cite{CNETIterativeStandard} describes a similar protocol: iterated contract net (ICN). When an initiator receives bids, it can choose to accept one, or choose to iterate the process by issuing an adapted the call for proposal to (a subset of) the bidders. The intent of this next iteration is to receive better bids. The protocol stops when a participant is awarded the contract, the initiator stops issuing calls for proposals (because all bids are unsatisfactory) or all participants stop bidding.
+\cite{CNETIterativeStandard} describes a similar protocol: iterated contract net (ICN). When an initiator receives bids, it can choose to accept a bid, or can iterate the process by issuing an adapted call for proposal to (a subset of) the bidders. The intent of this next iteration is to receive better bids. The protocol stops when a participant is awarded the contract, the initiator stops issuing calls for proposals (because all bids are unsatisfactory) or all participants stop bidding.
 
-One of the main differences between \cite{TentativeBidding} and ICN, is that ICN issues new calls for proposals and can thus actively try to increase the price of the contract.  
+One of the main differences between \cite{TentativeBidding} and ICN is that in ICN new calls for proposals are issued, while the same call for proposal is reused in \cite{TentativeBidding}. An initiator in the ICN protocol can thus actively try to increase the price of the contract.  
 
-\cite{LeveledCommitment} uses game theory to prove that leveled commitment is to be preferred over full commitment in all situations. In the negotiation of a contract, a decommitting penalty is agreed. (This penalty might be different for both agents.) When an agent wants to cancel the contract, he has to pay his decommitting fee to the other agent. This not only gives a way to calculate whether or not to cancel a contract in favor of another contract\footnote{They prove (again using game theory) that it is harder than just checking if the profit of the new contract is higher than the fee, because the other agent might decommit if this agent doesn't decommit.}. It also allows contracts that were not possible using full commitment: it is possible that the benefit from a contract is lower than the expected benefit from other contracts that have not yet been announced. But by having the right decommitting fees, a leveled commitment contract might still be interesting for both parties.
+\cite{LeveledCommitment} uses game theory to prove that a leveled commitment is to be preferred over full commitment in all situations. In the negotiation of a contract in this protocol, a decommitting penalty is agreed, which might be different for both agents. When an agent wants to cancel the contract, it then has to pay this decommitting fee to the other agent. The fee becomes a factor in calculating whether or not it is interesting to cancel the current contract in favor of another contract\footnote{The paper proves (again using game theory) that the consideration by an agent of canceling a contract is more than just checking if the profit of the new contract is higher than the decommitting fee that would then have to be paid. The other agent might decommit if this agent doesn't decommit, which means that this agent would then lose out on both this contract and the new contract.}. It also allows for contracts that were not possible using full commitment. Normally the benefit from an offered contract could be lower than the expected benefit from other contracts that have not yet been announced, which means the agent would wait and not commit to that offered contract. By having the right decommitting fees, this offered leveled commitment contract could become interesting and could be taken up.
+
+\commentV{uitleggen dat we deze niet geimplementeerd hebben}
 
 \section{Multi-agent system design}
 \outline{Wat wij concreet doen}
